# ddc-winapi-rs

./: .travis.yml  Cargo.toml  README.md  ci.nix  flake.nix  lock.nix  search-index.js
.github/workflows/: ddc-winapi.yml
ddc_winapi/: enumerate_monitors.v.html  fn.enumerate_monitors.html  fn.get_physical_monitors_from_hmonitor.html  get_physical_monitors_from_hmonitor.v.html  index.html  sidebar-items.js  struct.Monitor.html
examples/: enum.rs  enum_deviceinfo.rs  enum_display.rs
implementors/core/fmt/: trait.Debug.js
implementors/core/ops/drop/: trait.Drop.js
implementors/ddc/: trait.Ddc.js  trait.DdcHost.js
src/: display.rs  guid.rs  lib.rs  monitor.rs  output.rs
src/ddc_winapi/: lib.rs.html
src/ddc_winapi/winapi/: lowlevelmonitorconfigurationapi.rs.html  physicalmonitorenumerationapi.rs.html
src/device/: info.rs  mod.rs  set.rs
src/device/prop/: mod.rs  property.rs  ty.rs  value.rs
src/registry/: key.rs  mod.rs
src/winapi/: lowlevelmonitorconfigurationapi.rs  physicalmonitorenumerationapi.rs
