[package]
name = "ddc-winapi"
version = "0.3.0"
authors = ["arcnmx"]
edition = "2018"

description = "DDC/CI monitor control on Windows"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "https://docs.rs/ddc-winapi"
repository = "https://github.com/arcnmx/ddc-winapi-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/examples/**/*.rs",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
	"x86_64-pc-windows-msvc", "i686-pc-windows-msvc",
	"x86_64-pc-windows-gnu", "i686-pc-windows-gnu",
	"aarch64-pc-windows-msvc",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ddc = { version = "0.3", git = "https://github.com/arcnmx/ddc-rs", branch = "v0.3.x" }
widestring = "1"

[dependencies.winapi]
version = "0.3"
features = ["windef", "minwindef", "winuser", "physicalmonitorenumerationapi", "lowlevelmonitorconfigurationapi"]
