[package]
name = "ddc-winapi"
version = "0.2.2"
authors = ["arcnmx"]

description = "DDC/CI monitor control on Windows"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "https://docs.rs/ddc-winapi"
repository = "https://github.com/arcnmx/ddc-winapi-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/examples/**/*.rs",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
	"x86_64-pc-windows-msvc", "i686-pc-windows-msvc",
	"x86_64-pc-windows-gnu", "i686-pc-windows-gnu",
	"aarch64-pc-windows-msvc",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ddc = "0.2"
widestring = "1"

[dependencies.winapi]
version = "0.3"
features = ["windef", "minwindef", "winuser", "physicalmonitorenumerationapi", "lowlevelmonitorconfigurationapi"]
